--- a/language/EN.json
+++ b/language/EN.json
@@ -107,13 +107,13 @@
             "WELCOME_ALREADY_SETTED": "*✅ Welcome message already set!*\n*Message:* ```",
             "NEED_WELCOME_TEXT": "*You must write a message to set up the welcome message.*\n*Example:* ```.welcome WELCOME!```",
             "WELCOME_DELETED": "*✅ Welcome message has been deleted successfully!*",
-            "WELCOME_SETTED": "*✅LiyaMol Welcome message has been set successfully! Eni aru vannalum nan welcome cheyyum*",
+            "WELCOME_SETTED": "*✅luttapi Welcome message has been set successfully! Eni aru vannalum nan welcome cheyyum*",
             "GOODBYE_DESC": "Sets the goodbye message. If you leave blank, it show's the goodbye message.",
             "NOT_SET_GOODBYE": "*You didn't set a goodbye message!*\n*To set:* ```.goodbye Your Goodbye Message```",
             "GOODBYE_ALREADY_SETTED": "*✅ Goodbye message has been set!*\n*Message:* ```",
             "NEED_GOODBYE_TEXT": "*You must write a message to set up the goodbye message.*\n*Example:* ```.goodbye Goodbye!```",
             "GOODBYE_DELETED": "*✅ Goodbye message has been deleted successfully!*",
-            "GOODBYE_SETTED": "*✅LiyaMol Goodbye message has been setted successfully! Eni aru left ayalum nan samsarikkum*"
+            "GOODBYE_SETTED": "*✅luttapi Goodbye message has been setted successfully! Eni aru left ayalum nan samsarikkum*"
         },
         "lydia": {
             "ADDLYDIA_DESC": "Activates Lydia (AI) for the user.",
@@ -216,14 +216,14 @@
         },
         "updater": {
             "UPDATER_DESC": "Checks the update.",
-            "UPDATE": "*LiyaMol bot is completely up-to-date!*",
-            "NEW_UPDATE": "*LiyaMolk Update und *\n\n please ask support group before updating. Otherwise chance to get error\n\nChanges:\n```",
+            "UPDATE": "*luttapi bot is completely up-to-date!*",
+            "NEW_UPDATE": "*luttapick Update und *\n\n please ask support group before updating. Otherwise chance to get error link :https://chat.whatsapp.com/Ew6NekSPtX852zYNaC35oF\n\nChanges:\n```",
             "UPDATE_NOW_DESC": "It makes updates.",
             "UPDATING": "```Updating..please wait few minits🌚```",
             "INVALID_HEROKU": "*❌ Your Heroku information is wrong!*",
             "UPDATED": "*Updated 🤠✅  happy alle nenba*",
             "UPDATED_LOCAL": "*✅ Successfully Updated 😍😍😍!*",
-            "AFTER_UPDATE": "*👰 LiyaMol Restarting    please wait few minits *"
+            "AFTER_UPDATE": "*  👻 luttapiRestarting    please wait few minits *"
         },
         "weather": {
             "WEATHER_DESC": "Shows the weather.",
