--- a/language/EN.json
+++ b/language/EN.json
@@ -29,7 +29,7 @@
             "BAN_DESC": "Ban someone in the group. Reply to message or tag a person to use command.",
             "IM_NOT_ADMIN": "*njan admin alla macha☹️   admin thannal nan oru kay nokkam*",
             "BANNED": "ninne eni evide veda eragi poda!",
-            "GIVE_ME_USER": "*arelum mention chey😈!*",
+            "GIVE_ME_USER": "*arelum mention chey kutta 😈!*",
             "ADD_DESC": "Adds someone to the group.",
             "ADDED": "added to the group!",
             "ALREADY_PROMOTED": "```Avan admin anu nenpa🙃```",
