--- a/language/ML.json
+++ b/language/ML.json
@@ -28,16 +28,16 @@
         "admin": {
             "BAN_DESC": "groupil nin arellum porth akaan. ayallude messagin reply cheyu allenkill tag cheyyu.",
             "IM_NOT_ADMIN": "*njan admin alla macha☹️ admin thannal nan oru kay nokkam*",
-            "BANNED": "nintte seavanam eni venda evide",
+            "BANNED": "irange pooda moone",
             "GIVE_ME_USER": "*arelum mention chey😈!*",
             "ADD_DESC": "Adds someone to the group.",
-            "ADDED": "groupilott keteekn!",
+            "ADDED": "groupilott vann Puthiya aalk swagatham 😘!",
             "ALREADY_PROMOTED": "```Avan admin anu nenpa🙃```",
-            "PROMOTED": "```admin aakki..!```",
+            "PROMOTED": "```admin set aakki..!```",
             "PROMOTE_DESC": "oralle admin akkaan.",
-            "DEMOTE_DESC": "admin sthanam edth kalaayan.",
-            "ALREADY_NOT_ADMIN": "```admine njan engane veendum admin aakkum?```",
-            "DEMOTED": "```, ivante admin sthanam onn mateekn!```",
+            "DEMOTE_DESC": "admin sthanam edth kandathil kalaayan.",
+            "ALREADY_NOT_ADMIN": "```admine njan engane veendum admin aakkum?,nooki cheymoone 🤦🏻‍♂️```",
+            "DEMOTED": "```, ivante admin sthanam eduth kandathil kalanju!```",
             "MUTE_DESC": "group messaging admin mathram akaan.",
             "MUTED": "```admin only aakki!```",
             "UNMUTE_DESC": "aarkum message ayaan, admin only allathe akkan.",
@@ -55,7 +55,7 @@
             "IM_AFK_NOMD": "njan AFK aan!",
             "REASON": "kaaranam",
             "LAST_SEEN": "avasanam kandath",
-            "IM_NOT_AFK": "```njan AFK aan!```",
+            "IM_NOT_AFK": "```njan AFK aan moonu!```",
             "AFK_TEXT": "```ente owner ippo online illa.```",
             "AFK_TEXT_NOMD": "njan bot aan!",
             "HOUR": "manikoor",
